--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </nav>
 
     <!-- banner part -->
-    <section class="mt-12 px-5">
+    <section class="mt-12 px-5 relative">
       <div class="carousel w-full">
         <div id="slide1" class="justify-center text-center carousel-item relative w-full" style="background-image: url('images/banner1.png'); background-size: 100%; background-repeat: no-repeat;">
           <div>
@@ -90,6 +90,28 @@
                     <a href="#slide3" class="btn btn-circle">❮</a> 
                     <a href="#slide1" class="btn btn-circle">❯</a>
                   </div>
+        </div>
+      </div>
+      <div class="absolute bg-white flex justify-between gap-14 text-center -bottom-20 right-40 py-12 px-16 rounded-lg">
+        <div>
+          <img src="images/fruit1.png" alt="">
+          <p>Strawberry</p>
+        </div>
+        <div>
+          <img src="images/fruit2.png" alt="">
+          <p>Orange</p>
+        </div>
+        <div>
+          <img src="images/fruit3.png" alt="">
+          <p>Mango</p>
+        </div>
+        <div>
+          <img src="images/fruit4.png" alt="">
+          <p>Strawberry</p>
+        </div>
+        <div>
+          <img src="images/fruit5.png" alt="">
+          <p>Mango</p>
         </div>
       </div>
     </section>
