added some styles

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <img src="images/logo.png" alt="">
           <a class="btn btn-ghost normal-case text-xl">Fruit Burst</a>
         </div>
-        <div class="form-control lg:flex-1">
-                    <input type="text" placeholder="Search" class="input input-bordered w-24 bg-white text-[#12121266] rounded-full md:w-auto" />
+        <div class="form-control hidden md:flex md:flex-1 lg:flex lg:flex-1">
+          <input type="text" placeholder="Search" class="input input-bordered w-24 bg-white text-[#12121266] rounded-full md:w-auto" />
         </div>
       </div>
     </nav>
@@ -48,7 +48,7 @@
           <div>
             <h1 class="text-white text-lg mb-1 mt-1 lg:text-7xl lg:mb-6 lg:mt-20">Exotic tastes at your<br>doorstep</h1>
             <p class="text-white text-base mb-2 lg:text-xl lh:mb-8">We supply highly quality organic products</p>
-            <button class="btn mb-2 lg:mb-52">Shop Now</button>
+            <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7 mb-2 lg:mb-52">Shop Now</button>
           </div>
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide4" class="btn btn-circle">❮</a> 
@@ -314,7 +314,7 @@
       </div>
 
       <div class="mt-12 text-center">
-        <button class="btn">Shop All</button>
+        <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7">Shop All</button>
       </div>
     </section>
 
@@ -400,11 +400,11 @@
       </div>
       <div class="flex gap-11 flex-col text-center lg:flex-row lg:text-left">
         <div class="order-2 lg:order-none">
-          <div class="flex gap-6 flex-col lg:flex-row">
-            <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="30" cy="30" r="30" fill="#121212" fill-opacity="0.1"/>
-              <path d="M38.52 27.1604C39.2025 26.4919 39.6 25.5787 39.6 24.6C39.6 22.615 37.9852 21 36 21C35.3441 21 34.6988 21.1803 34.1332 21.5215C33.9442 21.6358 33.8832 21.8814 33.9973 22.0707C34.1113 22.26 34.3574 22.3203 34.5465 22.2067C34.9875 21.9406 35.4899 21.8 36 21.8C37.5437 21.8 38.8 23.0561 38.8 24.6C38.8 25.5508 38.3238 26.4271 37.5246 26.9455C36.8535 27.3857 36.0027 27.5127 35.2258 27.2914C35.0156 27.2308 34.7922 27.3535 34.7312 27.566C34.6707 27.7785 34.7937 27.9997 35.0062 28.0605C35.3297 28.1531 35.664 28.2 36 28.2C36.629 28.2 37.2369 28.0284 37.7767 27.7185C39.8301 28.4626 41.2 30.4013 41.2 32.6V34.6H37.5525C37.2692 31.9283 35.5884 29.5904 33.1367 28.4802C33.9169 27.6859 34.4 26.5988 34.4 25.4C34.4 22.9738 32.4262 21 30 21C27.5738 21 25.6 22.9738 25.6 25.4C25.6 26.5991 26.0834 27.6866 26.864 28.481C26.0389 28.8559 25.2736 29.3803 24.6246 30.0256C23.3804 31.2734 22.6233 32.8749 22.4436 34.6001H18.8V32.6001C18.8 31.2149 19.341 29.9089 20.3219 28.9239C20.8619 28.3874 21.5192 27.978 22.227 27.7208C22.7669 28.0294 23.373 28.2 24 28.2C24.336 28.2 24.6703 28.1531 24.9937 28.0605C25.2062 27.9998 25.3293 27.7785 25.2688 27.566C25.2078 27.3535 24.9844 27.231 24.7742 27.2914C23.9977 27.5131 23.1473 27.3863 22.4735 26.9445C21.6762 26.4271 21.2 25.5508 21.2 24.6C21.2 23.0561 22.4563 21.8 24 21.8C24.5101 21.8 25.0125 21.9406 25.4535 22.2067C25.6433 22.3203 25.8883 22.2594 26.0027 22.0707C26.1168 21.8815 26.0558 21.6358 25.8668 21.5215C25.3012 21.1803 24.6559 21 24 21C22.0148 21 20.4 22.615 20.4 24.6C20.4 25.578 20.7968 26.4904 21.4774 27.1583C20.843 27.4532 20.2571 27.8603 19.7563 28.3578C18.6238 29.4953 18 31.0018 18 32.6V35C18 35.2209 18.1789 35.4 18.4 35.4H22.4V38.6C22.4 38.8209 22.5789 39 22.8 39H37.2C37.4211 39 37.5999 38.8209 37.5999 38.6V35.4H41.5999C41.821 35.4 41.9999 35.2209 41.9999 35V32.6C42 30.2349 40.6255 28.131 38.52 27.1604ZM26.4 25.4C26.4 23.415 28.0148 21.8 30 21.8C31.9852 21.8 33.6 23.415 33.6 25.4C33.6 27.385 31.9852 29 30 29C28.0148 29 26.4 27.3849 26.4 25.4ZM36.8 38.2H23.2V35.4C23.2 33.5863 23.907 31.8783 25.1898 30.5916C25.8656 29.9194 26.6849 29.398 27.5633 29.0607C28.2615 29.527 29.0992 29.8 30 29.8C30.9022 29.8 31.7415 29.5262 32.4403 29.0585C35.0549 30.0631 36.8 32.5838 36.8 35.4V38.2Z" fill="#121212"/>
-            </svg>
+          <div class="flex gap-6 flex-col justify-center items-center lg:flex-row">
+              <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="30" cy="30" r="30" fill="#121212" fill-opacity="0.1"/>
+                <path d="M38.52 27.1604C39.2025 26.4919 39.6 25.5787 39.6 24.6C39.6 22.615 37.9852 21 36 21C35.3441 21 34.6988 21.1803 34.1332 21.5215C33.9442 21.6358 33.8832 21.8814 33.9973 22.0707C34.1113 22.26 34.3574 22.3203 34.5465 22.2067C34.9875 21.9406 35.4899 21.8 36 21.8C37.5437 21.8 38.8 23.0561 38.8 24.6C38.8 25.5508 38.3238 26.4271 37.5246 26.9455C36.8535 27.3857 36.0027 27.5127 35.2258 27.2914C35.0156 27.2308 34.7922 27.3535 34.7312 27.566C34.6707 27.7785 34.7937 27.9997 35.0062 28.0605C35.3297 28.1531 35.664 28.2 36 28.2C36.629 28.2 37.2369 28.0284 37.7767 27.7185C39.8301 28.4626 41.2 30.4013 41.2 32.6V34.6H37.5525C37.2692 31.9283 35.5884 29.5904 33.1367 28.4802C33.9169 27.6859 34.4 26.5988 34.4 25.4C34.4 22.9738 32.4262 21 30 21C27.5738 21 25.6 22.9738 25.6 25.4C25.6 26.5991 26.0834 27.6866 26.864 28.481C26.0389 28.8559 25.2736 29.3803 24.6246 30.0256C23.3804 31.2734 22.6233 32.8749 22.4436 34.6001H18.8V32.6001C18.8 31.2149 19.341 29.9089 20.3219 28.9239C20.8619 28.3874 21.5192 27.978 22.227 27.7208C22.7669 28.0294 23.373 28.2 24 28.2C24.336 28.2 24.6703 28.1531 24.9937 28.0605C25.2062 27.9998 25.3293 27.7785 25.2688 27.566C25.2078 27.3535 24.9844 27.231 24.7742 27.2914C23.9977 27.5131 23.1473 27.3863 22.4735 26.9445C21.6762 26.4271 21.2 25.5508 21.2 24.6C21.2 23.0561 22.4563 21.8 24 21.8C24.5101 21.8 25.0125 21.9406 25.4535 22.2067C25.6433 22.3203 25.8883 22.2594 26.0027 22.0707C26.1168 21.8815 26.0558 21.6358 25.8668 21.5215C25.3012 21.1803 24.6559 21 24 21C22.0148 21 20.4 22.615 20.4 24.6C20.4 25.578 20.7968 26.4904 21.4774 27.1583C20.843 27.4532 20.2571 27.8603 19.7563 28.3578C18.6238 29.4953 18 31.0018 18 32.6V35C18 35.2209 18.1789 35.4 18.4 35.4H22.4V38.6C22.4 38.8209 22.5789 39 22.8 39H37.2C37.4211 39 37.5999 38.8209 37.5999 38.6V35.4H41.5999C41.821 35.4 41.9999 35.2209 41.9999 35V32.6C42 30.2349 40.6255 28.131 38.52 27.1604ZM26.4 25.4C26.4 23.415 28.0148 21.8 30 21.8C31.9852 21.8 33.6 23.415 33.6 25.4C33.6 27.385 31.9852 29 30 29C28.0148 29 26.4 27.3849 26.4 25.4ZM36.8 38.2H23.2V35.4C23.2 33.5863 23.907 31.8783 25.1898 30.5916C25.8656 29.9194 26.6849 29.398 27.5633 29.0607C28.2615 29.527 29.0992 29.8 30 29.8C30.9022 29.8 31.7415 29.5262 32.4403 29.0585C35.0549 30.0631 36.8 32.5838 36.8 35.4V38.2Z" fill="#121212"/>
+              </svg>
               
             <div>
               <h4>Dedicated Team</h4>
@@ -412,7 +412,7 @@
               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
           </div>
-          <div class="flex gap-6 flex-col lg:flex-row">
+          <div class="flex gap-6 flex-col justify-center items-center lg:flex-row">
             <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="30" cy="30" r="30" fill="#121212" fill-opacity="0.1"/>
               <path d="M36.888 27.976C37.092 27.312 37.2 26.64 37.2 25.976C37.2 23.404 35.228 21.312 32.8 21.312C31.148 21.312 29.632 22.212 28.8 23.62C27.968 22.212 26.452 21.312 24.8 21.312C22.372 21.312 20.4 23.404 20.4 25.976C20.4 31.84 28.276 36.104 28.612 36.284C28.672 36.316 28.736 36.332 28.8 36.332C28.864 36.332 28.928 36.316 28.988 36.284C29 36.276 29.288 36.124 29.744 35.84C31.344 37.52 33.272 38.568 33.412 38.64C33.472 38.672 33.536 38.688 33.6 38.688C33.664 38.688 33.728 38.672 33.788 38.64C34.024 38.516 39.6 35.492 39.6 31.32C39.6 29.628 38.42 28.228 36.888 27.976ZM28.8 35.472C27.612 34.792 21.2 30.884 21.2 25.976C21.2 23.844 22.816 22.112 24.8 22.112C26.14 22.112 27.78 22.908 28.424 24.692C28.48 24.852 28.632 24.956 28.8 24.956C28.968 24.956 29.12 24.852 29.176 24.692C29.82 22.908 31.46 22.112 32.8 22.112C34.784 22.112 36.4 23.844 36.4 25.976C36.4 26.632 36.28 27.296 36.052 27.956C35.056 28.06 34.156 28.612 33.6 29.444C32.98 28.516 31.932 27.932 30.8 27.932C29.036 27.932 27.6 29.452 27.6 31.32C27.6 32.796 28.296 34.124 29.204 35.232C29.04 35.332 28.9 35.416 28.8 35.472ZM33.6 37.828C32.644 37.272 28.4 34.616 28.4 31.32C28.4 29.892 29.476 28.732 30.8 28.732C31.696 28.732 32.792 29.264 33.224 30.46C33.28 30.62 33.432 30.724 33.6 30.724C33.768 30.724 33.92 30.62 33.976 30.46C34.408 29.268 35.504 28.732 36.4 28.732C37.724 28.732 38.8 29.892 38.8 31.32C38.8 34.616 34.556 37.272 33.6 37.828Z" fill="black"/>
@@ -424,7 +424,7 @@
               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
           </div>
-          <div class="flex gap-6 flex-col lg:flex-row">
+          <div class="flex gap-6 flex-col justify-center items-center lg:flex-row">
             <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="30" cy="30" r="30" fill="#121212" fill-opacity="0.1"/>
               <g clip-path="url(#clip0_12_4988)">
@@ -459,10 +459,10 @@
           <img src="images/whychoose1.png" alt="">
         </div>
         <div class="order-3 lg:order-none">
-          <div class="flex gap-6 flex-col lg:flex-row">
+          <div class="flex gap-6 flex-col justify-center items-center lg:flex-row">
             <div class="order-2 lg:order-none">
               <h4>Dedicated Team</h4>
-              <hr class="w-1/2">
+              <hr class="w-1/2 m-auto lg:ml-0">
               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
 
@@ -487,10 +487,10 @@
               </defs>
             </svg>              
           </div>
-          <div class="flex gap-6 flex-col lg:flex-row">
+          <div class="flex gap-6 flex-col justify-center items-center lg:flex-row">
             <div class="order-2 lg:order-none">
               <h4>Dedicated Team</h4>
-              <hr class="w-1/2">
+              <hr class="w-1/2 m-auto lg:ml-0">
               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
             <svg class="order-1 lg:order-none" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -499,10 +499,10 @@
               <path d="M26.4705 25.752C26.4607 25.7578 26.4497 25.7614 26.4393 25.7662C26.4502 25.7627 26.4607 25.7579 26.4705 25.752Z" fill="black"/>
             </svg>  
           </div>
-          <div class="flex gap-6 flex-col lg:flex-row">
+          <div class="flex gap-6 flex-col justify-center items-center lg:flex-row">
             <div class="order-2 lg:order-none">
               <h4>Dedicated Team</h4>
-              <hr class="w-1/2">
+              <hr class="w-1/2 m-auto lg:ml-0">
               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
             <svg class="order-1 lg:order-none" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
